[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SpeechTokenizer"
version = "0.1.9"
authors = [
  { name="Author Name", email="author@example.com" },
]
description = "Code for tts tokenizer"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/johnwick123f/SpeechTokenizer/"
Issues = "https://github.com/johnwick123f/SpeechTokenizer/issues"
